2012-02-01  Andrew John Hughes  <ahughes@redhat.com>

	* resource/gnu/java/locale/LocaleInformation.properties,
	* resource/gnu/java/locale/LocaleInformation_ar.properties,
	* resource/gnu/java/locale/LocaleInformation_az.properties,
	* resource/gnu/java/locale/LocaleInformation_be.properties,
	* resource/gnu/java/locale/LocaleInformation_bg.properties,
	* resource/gnu/java/locale/LocaleInformation_bn.properties,
	* resource/gnu/java/locale/LocaleInformation_ca.properties,
	* resource/gnu/java/locale/LocaleInformation_cs.properties,
	* resource/gnu/java/locale/LocaleInformation_cy.properties,
	* resource/gnu/java/locale/LocaleInformation_da.properties,
	* resource/gnu/java/locale/LocaleInformation_de.properties,
	* resource/gnu/java/locale/LocaleInformation_ee.properties,
	* resource/gnu/java/locale/LocaleInformation_el.properties,
	* resource/gnu/java/locale/LocaleInformation_en.properties,
	* resource/gnu/java/locale/LocaleInformation_en_Dsrt.properties,
	* resource/gnu/java/locale/LocaleInformation_en_Shaw.properties,
	* resource/gnu/java/locale/LocaleInformation_es.properties,
	* resource/gnu/java/locale/LocaleInformation_fa.properties,
	* resource/gnu/java/locale/LocaleInformation_fi.properties,
	* resource/gnu/java/locale/LocaleInformation_fil.properties,
	* resource/gnu/java/locale/LocaleInformation_fr.properties,
	* resource/gnu/java/locale/LocaleInformation_gaa.properties,
	* resource/gnu/java/locale/LocaleInformation_he.properties,
	* resource/gnu/java/locale/LocaleInformation_hi.properties,
	* resource/gnu/java/locale/LocaleInformation_hr.properties,
	* resource/gnu/java/locale/LocaleInformation_hu.properties,
	* resource/gnu/java/locale/LocaleInformation_is.properties,
	* resource/gnu/java/locale/LocaleInformation_it.properties,
	* resource/gnu/java/locale/LocaleInformation_ja.properties,
	* resource/gnu/java/locale/LocaleInformation_ko.properties,
	* resource/gnu/java/locale/LocaleInformation_lt.properties,